syntax = "proto3";

package user;

option java_package = "com.ecommerce.proto";
option java_outer_classname = "UserProto";

// User Service Definition
service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc ValidateUser(ValidateUserRequest) returns (ValidationResponse);
  rpc UpdateUserPoints(UpdatePointsRequest) returns (UpdatePointsResponse);
}

// Request Messages
message GetUserRequest {
  string userId = 1;
}

message ValidateUserRequest {
  string token = 1;
}

message UpdatePointsRequest {
  string userId = 1;
  int32 points = 2;
  string operation = 3; // "ADD" or "SUBTRACT"
}

// Response Messages
message UserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message ValidationResponse {
  bool valid = 1;
  string userId = 2;
  string message = 3;
}

message UpdatePointsResponse {
  bool success = 1;
  string message = 2;
  int32 newBalance = 3;
}

// Data Models
message User {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string address = 6;
  int32 loyaltyPoints = 7;
  string createdAt = 8;
  string updatedAt = 9;
} 